@@ -1,3 +1,12 @@
+2013-01-02  David Tseng  <dtseng@google.com>
+
+        AX: Chromium needs platform localized strings for media controls.
+        https://bugs.webkit.org/show_bug.cgi?id=105940
+
+        Reviewed by Tony Chang.
+
+        * chromium/public/WebLocalizedString.h:
+
 2012-12-24  Alexei Filippov  <alph@chromium.org>
 
         Web Inspector: add async API for passing renderer process memory stats
